# postr

./: .gitignore  AUTHORS  Makefile.am  README  README.md  autogen.sh  configure.ac  postr  postr.doap  setup.cfg  setup.py
data/: postr.desktop.in.in
help/: Makefile.am  postr.omf.in
help/AZ/: sl.po
help/C/: groups.page  index.page  introduction.page  login.page  offline.page  permissions.page  sets.page  tags.page  uploading.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/sl/: sl.po
help/sv/: sv.po
nautilus/: postrExtension.py
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  cs.po  da.po  de.po  el.po  en_CA.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hi.po  hu.po  id.po  it.po  ka.po  lv.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
src/: AboutDialog.py  AuthenticationDialog.py  ContentTypeCombo.py  ErrorDialog.py  GroupSelector.py  ImageList.py  ImageStore.py  LicenseCombo.py  PrivacyCombo.py  ProgressDialog.py  PyUnique.py  SafetyCombo.py  SetCombo.py  StatusBar.py  TagsEntry.py  catalog_poster.xml  flickrest.py  iptcinfo.py  postr.glade  postr.py  proxyclient.py  util.py
