include $(top_srcdir)/gnome-doc-utils.make

dist-hook: doc-dist-hook

DOC_ID = postr
DOC_FIGURES = \
		figures/postr-login-flickr.png \
		figures/postr-main-window.png

DOC_PAGES = \
		groups.page \
		introduction.page \
		offline.page \
		sets.page \
		uploading.page \
		index.page \
		login.page \
		permissions.page \
		tags.page

MAINTAINERCLEANFILES = Makefile.in

DOC_LINGUAS = cs da de el es fr pl pt_BR ro sl sv
